appId: com.layerzwallet.mobile
---
- launchApp:
    clearState: true
    clearKeychain: true

- runFlow: skip-dev-client.yml

- waitForAnimationToEnd
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: 'Create Wallet'
    timeout: 150000

- tapOn: 'Create Wallet'

- extendedWaitUntil:
    visible: 'Write down these 12 words in numerical order and keep them in a secure place. Never share them with anyone.'
    timeout: 150000

# First wait for the loading to complete
- extendedWaitUntil:
    notVisible: 'Creating your wallet...'
    timeout: 60000

# Then verify the Continue button is available and enabled
- assertVisible:
    text: 'Continue'
    enabled: true

# Now proceed to the enter password screen
- repeat:
    while:
      notVisible:
        id: 'EnterPasswordInput'
    commands:
      - tapOn: 'Continue'
      - waitForAnimationToEnd

# Create password
- tapOn:
    id: 'EnterPasswordInput'
- inputText:
    text: '123456' # Password
- tapOn:
    id: 'RepeatPasswordInput'
- inputText:
    text: '123456' # Confirm password
- tapOn:
    point: 10%,10% # to remove focus from the keyboard
- tapOn:
    id: 'CreatePasswordButton'
- waitForAnimationToEnd

# Accept terms of service
- tapOn: 'I Agree'
- waitForAnimationToEnd

# Wait for home screen with Send & Receive buttons
- assertVisible: 'Send'
- assertVisible: 'Receive'
